kubernetes/redis-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mps-redis-cluster-headless
  namespace: front-mpos
  labels:
    app: mps-redis-cluster
spec:
  clusterIP: None
  selector:
    app: mps-redis-cluster
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
    - name: cluster-bus
      protocol: TCP
      port: 16379
      targetPort: 16379
