kubernetes/redis-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mps-redis-virtualservice
  namespace: front-mpos
spec:
  hosts:
    - "mps-redis-i-ut00.fbl.com.tw"
  tcp:
    - match:
        - port: 26379
      route:
        - destination:
            host: mps-redis-sentinel-service
            port:
              number: 26379
